chore: set homepage and polish README

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-portfolio",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://<your-github-username>.github.io/React-Portfolio/",
+  "homepage": "https://tufaildafedar0-prog.github.io/React-Portfolio/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
